--- a/gg_figma/nav_bar/nav_bar.css
+++ b/gg_figma/nav_bar/nav_bar.css
@@ -1,21 +1,27 @@
 .header {
     /* position: fixed; */
     display: flex;
+    margin-left: 60px;
+}
+
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .topnav a {
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 500;
     text-align: end;
     color:BLACK;
     text-decoration: none;  
-    padding: 14px 16px;
+    padding: 10px 13px;
 }
 
 .topnav {
     overflow: hidden;
-    padding-top: 25px;
-    padding-left: 70px;
+    padding-top: 27px;
+    padding-left: 40px;
 }
 .topnav a:hover {
     color: red;
